--- a/index.html
+++ b/index.html
@@ -26,6 +26,41 @@
 
 <br>
 
+<svg id="playground" viewbox="-50 -50 100 100">
+
+<line class="coords" x1="-25" y1="-50" x2="-25" y2="50"/>
+<line class="coords" x1="0" y1="-50" x2="0" y2="50"/>
+<line class="coords" x1="25" y1="-50" x2="25" y2="50"/>
+
+<line class="coords" x1="-50" y1="-25" x2="50" y2="-25"/>
+<line class="coords" x1="-50" y1="0" x2="50" y2="0"/>
+<line class="coords" x1="-50" y1="25" x2="50" y2="25"/>
+
+<defs>
+  <polygon id="triangle" points="-25,-25 25,-25 0,15"/>
+  <polygon id="triangle2" points="0,0 50,0 25,40" transform="rotate(90 25 20)"/>
+</defs>
+
+<use href="#triangle" x="0" y="0" fill="red"/>
+<use href="#triangle" x="0" y="0" transform="rotate(90 0 -10)"/>
+<use href="#triangle" x="25" y="25" transform="rotate(180 0 -10)" fill="green"/>
+
+<use href="#triangle2" x="0" y="0" fill="blue"/>
+
+
+<!-- 
+- define element according  to its own coords
+- remember center coords of element for transform
+- use element elsewhere with original center rotation
+- move element with x and y (these are rotated as well! so negate them)
+
+
+ -->
+
+</svg>
+
+
+
 <svg viewBox="0 0 841 595">
 
 <line class="coords" x1="100" y1="0" x2="100" y2="600"/>
