--- a/index.html
+++ b/index.html
@@ -27,150 +27,8 @@
 
 <br>
 
-<svg width="100%" height="100%" viewBox="0 0 1208 615" 
-     xmlns="http://www.w3.org/2000/svg">
 
-  <!-- Ray 1 -->
-  <a id="ray-1-group" href="http://esotericastrology.org/rays/ray1/">
-    <path class="ray-1-triangle" d="M276.579,303.535l216.766,-120.336l-220.935,-127.557l4.169,247.893Z" fill="url(#radial-1)"/>
-    <g id="ray-1-label">
-      <path class="ray-1-line" d="M272.41,55.642 l47.452,82.189"/>
-      <path class="ray-1-circle" d="M299.647,157.284c-14.666,25.403 -5.949,57.934 19.453,72.6c25.403,14.667 57.935,5.95 72.601,-19.453c14.666,-25.403 5.95,-57.934 -19.453,-72.6c-25.403,-14.667 -57.934,-5.95 -72.601,19.453Z"/>
-      <text class="ray-1-text" x="345px" y="215px">1</text>
-      <text class="ray-1-text-vert" x="345px" y="185px" transform="rotate(90 345 185)">1</text>
-    </g>
-  </a>
-
-  <!-- Ray 2 -->
-  <a id="ray-2-group" href="http://esotericastrology.org/rays/ray2/">
-    <path class="ray-2-triangle" d="M935.224,438.319l216.768,-120.336l-220.937,-127.559l4.169,247.895Z" fill="url(#radial-2)"/>
-    <g id="ray-2-label">
-      <path class="ray-2-line" d="M935.225,438.317 l42.521,-73.651"/>
-      <path class="ray-2-circle" d="M958.293,292.066c-14.666,25.403 -5.949,57.934 19.454,72.601c25.403,14.666 57.934,5.949 72.6,-19.453c14.666,-25.403 5.95,-57.935 -19.453,-72.601c-25.403,-14.666 -57.934,-5.95 -72.601,19.453Z"/>
-      <text class="ray-2-text" x="1005px" y="354px">2</text>
-    </g>
-  </a>
-
-  <!-- Ray 3 -->
-  <a id="ray-3-group" href="http://esotericastrology.org/rays/ray3/">
-    <path class="ray-3-triangle" d="M59.81,423.872l216.767,-120.337l-220.935,-127.557l4.168,247.894Z" fill="url(#radial-3)"/>
-    <g id="ray-3-label">
-      <path class="ray-3-line" d="M55.643,175.979l47.452,82.19"/>
-      <path class="ray-3-circle" d="M82.88,277.622c-14.666,25.403 -5.949,57.934 19.454,72.601c25.403,14.666 57.935,5.95 72.601,-19.453c14.666,-25.403 5.949,-57.934 -19.454,-72.601c-25.403,-14.667 -57.935,-5.95 -72.601,19.453Z"/>
-      <text class="ray-3-text" x="130px" y="339px">3</text>
-    </g>
-  </a>
-
-  <!-- Ray 4 -->
-  <a id="ray-4-group" href="http://esotericastrology.org/rays/ray4/">
-    <path class="ray-4-triangle" d="M714.285,310.759l4.171,247.894l-220.936,-127.558l216.765,-120.336Z" fill="#ffe82a"/>
-    <g id="ray-4-label">
-      <path class="ray-4-line" d="M718.456,558.653l-47.452,-82.19" style="stroke-width:3px;"/>
-      <path class="ray-4-circle" d="M598.777,404.536c-14.666,25.403 -5.95,57.934 19.453,72.6c25.403,14.667 57.934,5.95 72.601,-19.453c14.666,-25.403 5.95,-57.934 -19.453,-72.601c-25.403,-14.666 -57.935,-5.949 -72.601,19.454Z" style="stroke-width:3px;"/>
-      <text class="ray-4-text" x="640px" y="467px" style="font-family:'Times-Bold', 'Times';font-weight:700;">4</text>
-    </g>
-  </a>
-
-  <!-- Ray 5 -->
-  <a id="ray-5-group" href="http://esotericastrology.org/rays/ray5/">
-    <path class="ray-5-triangle" d="M710.116,62.864l4.169,247.893l-220.937,-127.557l216.768,-120.336Z" fill="url(#radial-5)"/>
-    <g id="ray-5-label">
-      <path class="ray-5-line" d="M710.116,62.864l-42.909,74.324"/>
-      <path class="ray-5-line" d="M493.348,183.2l94.906,0" style="stroke-dasharray:4.5,4.5;"/>
-      <path class="ray-5-circle" d="M594.607,156.641c-14.666,25.403 -5.95,57.934 19.453,72.6c25.402,14.666 57.933,5.95 72.6,-19.453c14.666,-25.403 5.95,-57.934 -19.453,-72.6c-25.403,-14.667 -57.933,-5.95 -72.6,19.453Z"/>
-      <text class="ray-5-text" x="640px" y="220px">5</text>
-    </g>
-  </a>
-
-  <!-- Ray 6 -->
-  <a id="ray-6-group" href="http://esotericastrology.org/rays/ray6/">
-    <path class="ray-6-triangle" d="M931.054,190.422l4.17,247.895l-220.937,-127.558l216.767,-120.337Z" fill="url(#radial-6)"/>
-    <g id="ray-6-label">
-      <path class="ray-6-line" d="M714.287,310.759l94.906,0"/>
-      <path class="ray-6-circle" d="M815.546,284.2c-14.666,25.403 -5.95,57.934 19.453,72.601c25.402,14.666 57.933,5.949 72.6,-19.454c14.666,-25.403 5.95,-57.934 -19.453,-72.6c-25.402,-14.666 -57.933,-5.95 -72.6,19.453Z"/>
-      <text class="ray-6-text" x="862px" y="346px">6</text>
-    </g>
-  </a>
-
-  <!-- Ray 7 --> 
-  <a id="ray-7-group" href="http://esotericastrology.org/rays/ray7/">
-    <path class="ray-7-triangle" d="M272.408,55.642l4.17,247.892l-220.935,-127.557l216.765,-120.335Z" fill="url(#radial-7)"/>
-    <g id="ray-7-label">
-      <path class="ray-7-line" d="M276.578,303.534l-47.452,-82.19"/>
-      <path class="ray-7-circle" d="M156.899,149.417c-14.666,25.403 -5.949,57.934 19.454,72.601c25.403,14.667 57.935,5.95 72.601,-19.453c14.666,-25.403 5.949,-57.934 -19.454,-72.601c-25.403,-14.666 -57.935,-5.95 -72.601,19.453Z"/>
-      <text class="ray-7-text" x="203px" y="216px">7</text>
-    </g>
-  </a>
-
-
-  <g id="sign-nodes">
-
-    <!-- capricorn -->
-    <path class="cardinal-earth" d="M303.154,257.509c25.419,14.676 34.13,47.181 19.454,72.601c-14.677,25.421 -47.182,34.129 -72.602,19.453c-25.419,-14.676 -34.13,-47.18 -19.453,-72.601c14.676,-25.42 47.181,-34.129 72.601,-19.453"/>
-    <text class="node-text" x="282px" y="337px">j</text>
-    <text class="node-text-vert" x="282px" y="337px" transform="rotate(90 282 337)">j</text>
-    <!-- cancer -->
-    <path class="cardinal-water" d="M82.216,129.951c25.419,14.676 34.129,47.18 19.453,72.599c-14.677,25.421 -47.181,34.131 -72.6,19.455c-25.42,-14.676 -34.131,-47.181 -19.454,-72.602c14.676,-25.419 47.181,-34.128 72.601,-19.452"/>
-    <text x="17px" y="208px">d</text>
-    <!-- aries -->
-    <path class="cardinal-fire" d="M298.984,9.615c25.419,14.676 34.13,47.181 19.453,72.601c-14.676,25.42 -47.181,34.129 -72.6,19.453c-25.42,-14.676 -34.131,-47.181 -19.455,-72.601c14.677,-25.42 47.182,-34.129 72.602,-19.453"/>
-    <text x="232px" y="93px">a</text>
-    <!-- libra -->
-    <path class="cardinal-air" d="M13.784,397.299c14.677,-25.421 47.182,-34.13 72.602,-19.454c25.419,14.676 34.13,47.181 19.453,72.602c-14.676,25.42 -47.181,34.128 -72.6,19.452c-25.42,-14.676 -34.131,-47.18 -19.455,-72.6"/>
-    <text x="20px" y="444px">g</text>
-
-
-    <!-- aquarius -->
-    <path class="fixed-air" d="M664.091,36.291c14.676,-25.419 47.179,-34.13 72.6,-19.453c25.421,14.677 34.13,47.181 19.454,72.6c-14.677,25.421 -47.181,34.131 -72.601,19.454c-25.421,-14.677 -34.129,-47.18 -19.453,-72.601"/>
-    <text x="671.025px" y="91.213px">k</text>
-    <!-- leo -->
-    <path class="fixed-fire" d="M447.321,156.628c14.677,-25.421 47.181,-34.131 72.601,-19.455c25.42,14.677 34.13,47.181 19.453,72.602c-14.676,25.42 -47.18,34.129 -72.601,19.452c-25.419,-14.676 -34.129,-47.18 -19.453,-72.599"/>
-    <text x="457.693px" y="214.96px">e</text>
-    <!-- taurus -->
-    <path class="fixed-earth" d="M451.493,404.522c14.676,-25.42 47.179,-34.13 72.6,-19.453c25.421,14.676 34.13,47.18 19.454,72.6c-14.677,25.422 -47.181,34.13 -72.601,19.453c-25.421,-14.676 -34.13,-47.178 -19.453,-72.6"/>
-    <text x="463.301px" y="467.456px">b</text>
-    <!-- scorpio -->
-    <path class="fixed-water" d="M672.432,532.081c14.676,-25.42 47.179,-34.13 72.599,-19.454c25.422,14.678 34.13,47.181 19.454,72.6c-14.678,25.423 -47.179,34.131 -72.602,19.454c-25.419,-14.676 -34.128,-47.178 -19.451,-72.6"/>
-    <text x="680.71px" y="595.396px">h</text>
-
-
-    <!-- sagittarius -->
-    <path class="mutable-fire" d="M668.26,284.187c14.677,-25.421 47.181,-34.13 72.601,-19.454c25.421,14.676 34.13,47.18 19.453,72.601c-14.676,25.42 -47.18,34.129 -72.601,19.452c-25.419,-14.676 -34.129,-47.179 -19.453,-72.599"/>
-    <text x="676.774px" y="344.799px">i</text>
-    <!-- virgo -->
-    <path class="mutable-earth" d="M889.2,411.746c14.676,-25.421 47.18,-34.13 72.6,-19.454c25.421,14.677 34.13,47.181 19.453,72.601c-14.676,25.42 -47.18,34.129 -72.6,19.453c-25.42,-14.676 -34.129,-47.18 -19.453,-72.6"/>
-    <text x="900.799px" y="476.597px">f</text>
-    <!-- pisces -->
-    <path class="mutable-water" d="M885.03,163.85c14.676,-25.419 47.179,-34.129 72.599,-19.453c25.422,14.677 34.13,47.18 19.454,72.6c-14.677,25.421 -47.179,34.131 -72.602,19.453c-25.419,-14.676 -34.127,-47.179 -19.451,-72.6"/>
-    <text x="898.602px" y="225.37px">l</text>
-    <!-- gemini -->
-    <path class="mutable-air" d="M1105.97,291.409c14.676,-25.42 47.18,-34.129 72.6,-19.453c25.421,14.677 34.13,47.181 19.454,72.6c-14.677,25.421 -47.181,34.13 -72.602,19.454c-25.419,-14.676 -34.129,-47.18 -19.452,-72.601"/>
-    <text x="1113.41px" y="354.717px">c</text>
-  </g>
-  
-  
-  <defs>
-    <radialGradient id="radial-1" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="matrix(121.135,69.9373,-69.9373,121.135,347.334,184.507)">
-      <stop offset="0"/> <stop offset="1"/>
-    </radialGradient>
-    <radialGradient id="radial-2" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="matrix(121.136,69.9378,-69.9378,121.136,1002.93,317.528)">
-      <stop offset="0"/> <stop offset="1"/>
-    </radialGradient>
-    <radialGradient id="radial-3" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="matrix(118.411,68.3646,-68.3646,118.411,128.993,307.568)">
-      <stop offset="0"/> <stop offset="1"/>
-    </radialGradient>
-    <radialGradient id="radial-5" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="matrix(121.135,69.9375,-69.9375,121.135,642.412,183.654)">
-      <stop offset="0"/> <stop offset="1"/>
-    </radialGradient>
-    <radialGradient id="radial-6" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="matrix(121.135,69.9375,-69.9375,121.135,863.351,311.213)">
-      <stop offset="0"/> <stop offset="1"/>
-    </radialGradient>
-    <radialGradient id="radial-7" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="matrix(118.411,68.3649,-68.3649,118.411,203.227,171.946)">
-      <stop offset="0"/> <stop offset="1"/>
-    </radialGradient>
-
-  </defs>
-</svg>
+<img id="diagram" src="horizontal.svg" />
 
 
 <!-- <br>
