rotation around text center working

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <br>
 
 
-<object id="diagram" type="image/svg+xml" data="horizontal.svg"></object>
+<object id="diagram" type="image/svg+xml" data="rays.svg"></object>
 
 
 
