--- a/demo.html
+++ b/demo.html
@@ -10,8 +10,8 @@
 
   <object data="demo.svg"></object>
 
-add text rotation around center
-check box rotation around center
+  <p>add text rotation around center</p>
+  <p>check box rotation around center</p>
 
 </body>
 </html>
