--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 <br>
 
-<p class="astro">abcdefghijklmnopqrstuvwxyz1234567890</p>
-<p class="astro">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+<p class="astro">abcdefghijklmno<br>pqrstuvwxyz<br>1234567890</p>
+<p class="astro">ABCDEFGHIJKLMNO<br>PQRSTUVWXYZ</p>
 
 <br>
 
