--- a/demo.html
+++ b/demo.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SVG-Demo</title>
+
+  <style>object { border: 1px solid black; }</style>
 </head>
 <body>
 
