--- a/index.html
+++ b/index.html
@@ -33,8 +33,24 @@
 <br>
 
 
+<!-- 
+  set width to less than 600px for portrait mode (svg js kicks in)
+  set width to larger than 600px for landscape mode 
+-->
+<style>
+  object {
+    overflow: hidden;
+    height: auto;
+  }
+</style>
+
 <object id="diagram" type="image/svg+xml" data="rays.svg"></object>
 
+<object id="diagram" width="400" type="image/svg+xml" data="rays.svg"></object>
+
+<object id="diagram" width="700" type="image/svg+xml" data="rays.svg"></object>
+
+<object id="diagram" width="100%" type="image/svg+xml" data="rays.svg"></object>
 
 
 <!-- <script>
