--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   <object type="image/svg+xml" data="circles/octile.svg"></object>
   <object type="image/svg+xml" data="circles/novile.svg"></object>
   <object type="image/svg+xml" data="circles/decile.svg"></object>
-  <object type="image/svg+xml" data="circles/11.svg"></object>
-  <object type="image/svg+xml" data="circles/12.svg"></object>
+  <object type="image/svg+xml" data="circles/hendecile.svg"></object>
+  <object type="image/svg+xml" data="circles/dodecile.svg"></object>
 </section>
 
 
