start single triangles

--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
   set width to larger than 600px for landscape mode 
 -->
 
+<!-- <object data="triangles/first.svg"></object>
+<object width="188px" data="triangles/first.svg"></object>
+<img src="triangles/ray1-triangle.png"> -->
 
 <section id="circles">
+<!-- <object type="image/svg+xml" data="triangles/first.svg"></object> -->
   <object type="image/svg+xml" data="circles/conjunction.svg"></object>
   <object type="image/svg+xml" data="circles/opposition.svg"></object>
   <object type="image/svg+xml" data="circles/trine.svg"></object>
